@@ -73,7 +73,7 @@ class GeneralizationItem(relationship.RelationshipItem):
 	    s2 = c2.subject
 	    relation = self.find_relationship(s1, s2)
 	    if not relation:
-		relation = UML.ElementFactory().create(UML.Generalization)
+		relation = gaphorResource(UML.ElementFactory).create(UML.Generalization)
 		relation.parent = s1
 		relation.child = s2
 	    self._set_subject(relation)
