@@ -1,5 +1,3 @@
 
 __all__ = [ 'singleton', 'command', 'signal', 'storage', 'menufactory' ]
 
-from gaphorerror import GaphorError
-
