@@ -13,6 +13,9 @@ comment96.png
 dependency16.png
 dependency24.png
 dependency96.png
+diagram16.png
+diagram24.png
+diagram96.png
 extend24.png
 extend96.png
 generalization16.png
