@@ -1,3 +1,9 @@
+2002-09-05  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
+
+	* gaphor/gaphor.py: Added GaphorError here. Added a generic resource
+	locator here. Added GaphorError and the resource locator
+	(gaphorResource) to the builtin namespace.
+
 2002-08-28  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
 
 	* Makefile.am: Now require Automake 1.6
